--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "i": "^0.3.7",
+    "npm": "^8.19.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.7.10",
     "vue-html-to-paper": "^1.4.4",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
