--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^8.19.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.7.10",
+    "vue-click-outside": "^1.1.0",
     "vue-html-to-paper": "^1.4.4",
     "vue-image-crop-upload": "^3.0.3",
     "vue-router": "^3.5.1",
