--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "npm": "^8.19.1",
     "register-service-worker": "^1.7.2",
+    "uuid": "^9.0.0",
     "vue": "^2.7.10",
     "vue-click-outside": "^1.1.0",
     "vue-html-to-paper": "^1.4.4",
