--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-html-to-paper": "^1.4.4",
     "vue-image-crop-upload": "^3.0.3",
+    "vue-input-autowidth": "^1.0.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
