--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-image-crop-upload": "^3.0.3",
     "vue-input-autowidth": "^1.0.11",
     "vue-router": "^3.5.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
