--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "i": "^0.3.7",
+    "jshint": "^2.13.5",
     "lodash": "^4.17.21",
     "npm": "^8.19.1",
     "register-service-worker": "^1.7.2",
