--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^4.0.1",
     "@vueuse/core": "^9.13.0",
     "html2pdf.js": "^0.10.1",
     "vue": "^3.2.45",
