--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "html2pdf.js": "^0.10.1",
     "vue": "^3.2.45",
     "vue-contenteditable": "^4.1.0",
-    "vue-html-to-paper": "^1.4.4"
+    "vue-html-to-paper": "^1.4.4",
+    "vue-image-crop-upload": "^3.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
