--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.2.45",
     "vue-contenteditable": "^4.1.0",
     "vue-html-to-paper": "^1.4.4",
-    "vue-image-crop-upload": "^3.0.3"
+    "vue-image-crop-upload": "^3.0.3",
+    "vue-unicons": "^3.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
