--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^4.0.1",
     "@vueuse/core": "^9.13.0",
+    "daisyui": "^2.51.3",
     "html2pdf.js": "^0.10.1",
     "vue": "^3.2.45",
     "vue-contenteditable": "^4.1.0",
