--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^4.0.1",
+    "@vueuse/components": "^9.13.0",
     "@vueuse/core": "^9.13.0",
     "daisyui": "^2.51.3",
     "html2pdf.js": "^0.10.1",
