--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vuepic/vue-datepicker": "^4.0.1",
     "@vueuse/components": "^9.13.0",
     "@vueuse/core": "^9.13.0",
+    "@vueuse/integrations": "^9.13.0",
     "daisyui": "^2.51.3",
+    "focus-trap": "^7.4.0",
     "html2pdf.js": "^0.10.1",
     "vue": "^3.2.45",
     "vue-contenteditable": "^4.1.0",
