--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-unicons": "^3.3.1"
   },
   "devDependencies": {
+    "@types/node": "^18.15.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
