--- a/package.json
+++ b/package.json
@@ -31,10 +31,19 @@
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
-  }
+  },
+  "lint-staged": { 
+        "*.{js,css,md,vue,json,ts,tsx,jsx}": "prettier --write" 
+    }
 }
