--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
   },
-  "lint-staged": { 
-        "*.{js,css,md,vue,json,ts,tsx,jsx}": "prettier --write" 
-    }
+  "lint-staged": {
+    "*.{js,css,md,vue,json,ts,tsx,jsx}": "prettier --write"
+  }
 }
