--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-contenteditable": "^4.1.0",
     "vue-html-to-paper": "^1.4.4",
     "vue-image-crop-upload": "^3.0.3",
+    "vue-router": "^4.1.6",
     "vue-unicons": "^3.3.1"
   },
   "devDependencies": {
