--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080",
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "@types/lodash": "^4.14.191",
