--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview --port 8080",
-    "deploy": "bash deploy.sh"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@types/lodash": "^4.14.191",
