--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview --port 8080",
+    "preview": "vue-tsc && vite build && vite preview --port 8080",
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
