--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vue-tsc && vite build && vite preview --port 8080",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "test": "vitest --dom"
   },
   "dependencies": {
     "@types/lodash": "^4.14.191",
@@ -32,18 +33,21 @@
     "@types/node": "^18.15.6",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.3.2",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "happy-dom": "^9.10.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vitest": "^0.30.1",
     "vue-tsc": "^1.0.24"
   },
   "lint-staged": {
